# rollbar-rs

./: Cargo.toml  Makefile
.circleci/: config.yml
examples/: error.rs  error_message.rs  message.rs  panic.rs
src/: lib.rs
