[package]
name    = "rollbar"
version = "0.7.1"
authors = ["Benjamin Rubinger <benjaminrubinger@remind101.com>"]
edition = '2021'

repository  = "https://github.com/RoxasShadow/rollbar-rs"
license     = "BSD-2-Clause"

description = "Track and report errors, exceptions and messages from your Rust application to Rollbar."
keywords    = ["rollbar", "logging", "errors", "exceptions"]

[dependencies]
backtrace = "0.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
